# DiscordBot

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  compose.yaml  create.sh  example.env  main.sh  pyproject.toml  run.sh
src/: __main__.py  config.py  core.py  utils.py
src/cogs/: __init__.py  coinflip.py  rng.py  stock.py
src/db/: __init__.py  connect.py  models.py  utils.py
src/migrations/: create.py
tests/: conftest.py  test_db.py  test_rng.py  test_stock.py  test_utils.py
