[project]
authors = [
    {name = "Metin Yalcinkaya", email = "metinyalcinkaya@hotmail.com.au"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "py-cord<3.0.0,>=2.6.1",
    "python-dotenv<2.0.0,>=1.0.1",
    "sqlalchemy<3.0.0,>=2.0.36",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "pycord>=0.1.1",
]
name = "discordbot"
version = "0.1.0"
description = "Discord bot w/ various functionality"
readme = "README.md"
package-mode = false

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


