[project]
authors = [
    {name = "Metin Yalcinkaya", email = "metinyalcinkaya@hotmail.com.au"},
]
requires-python = "<3.13,>=3.12"
dependencies = [
    "python-dotenv<2.0.0,>=1.0.1",
    "sqlalchemy<3.0.0,>=2.0.36",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "playwright>=1.49.1",
    "discord-py>=2.4.0",
    "price-parser>=0.3.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "async-lru>=2.0.4",
]
name = "discordbot"
version = "0.1.0"
description = "Discord bot w/ various functionality"
readme = "README.md"
package-mode = false

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
unfixable = ["F401"]
